--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="weatherMargin">24dp</dimen>
-    <dimen name="normal_start">20dp</dimen>
+    <dimen name="normal_start">24dp</dimen>
+    <dimen name="start_margin">4dp</dimen>
 </resources>
